[metadata]
name = envault
version = 0.1.0
description = Encrypt and manage .env files with team-sharing support via S3 or local backends
author = envault contributors
license = MIT

[options]
packages = find:
install_requires =
    click>=8.0
    cryptography>=41.0
    boto3>=1.26

[options.entry_points]
console_scripts =
    envault = envault.cli:cli

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov
    moto[s3]>=4.0

[tool:pytest]
testpaths = tests
addopts = --tb=short
